tests/operator/multiply_nonnum_num.rev
"1" * 1.5 // error: operation not supported